manifests/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-ts-svc
  labels:
    run: express-ts
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    run: express-ts
