manifests/resources/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: express-ts
spec:
  to:
    kind: Service
    name: express-ts-svc
